# snippets

a-scripting-example/: decrypt.rb  encrypt.sh  some-openssl-manipulations.sh
deferred/: CMakeLists.txt  deferred.h  test.cpp
small-async-contortions/: CMakeLists.txt  README.md  bt-on.cpp  bt-on.h  main.cpp
